res_rtp_asterisk:  Swap byte-order when sending signed linear

Before Asterisk 13, signed linear was converted into network byte order by a
smoother before being sent over the network. The smoother is no longer created
when no packetization information is supplied to Asterisk, so instead we hard
code a check for signed linear. We already do this on the read side of the RTP
session, this change adds it on the write side as well.

ASTERISK-24858 #close
Reported-by: Frankie Chin

Change-Id: I868449617d1a7819578f218c8c6b2111ad84f5a9